# DynamicSurface

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml   main.yml
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Application.hpp  CMakeLists.txt  SurfaceViewModel.cpp  SurfaceViewModel.hpp
src/qml/: CMakeLists.txt  Main.qml
src/render/: CMakeLists.txt  RenderWorker.cpp  RenderWorker.hpp
src/render/backend/: IRenderBackend.hpp  OsgBackend.cpp  OsgBackend.hpp
src/render/model/: ISurfaceParameters.hpp  Model.cpp  Model.hpp  ModelUpdateCallback.cpp  ModelUpdateCallback.hpp  SurfaceCompute.cpp  SurfaceCompute.hpp
src/ui/: CMakeLists.txt  Main.ui  MainWindow.cpp  MainWindow.hpp
